# Werubin

./: .gitignore  Gantt.xlsx  README.md  build_prod.sh  database_structure.drawio  manage.py  pyproject.toml
docker/: django.dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
feeds/: api_urls.py  api_views.py  urls.py  views.py
feeds/templates/feeds/: feed.html  tagFeed.html
feeds/templates/posts/: addToAlbumModal.html  albumModal.html  comment.html  imageModal.html  image_modal.html  likesSharesModal.html  (+7 more)
travels/: admin.py  api_urls.py  api_views.py  decorators.py  forms.py  models.py  post-example.json  serializers.py  urls.py  utils.py  views.py
travels/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_likes_alter_post_shares.py  0004_alter_post_shares.py  0005_location_tag_post_location_post_tags.py  0006_alter_post_tags.py  0007_alter_comment_likes_alter_tag_name.py  0008_alter_post_content.py  0009_alter_postimage_image.py  0010_alter_album_name_alter_location_name.py
travels/templates/: googleSearch.html  google_search.html
users/: admin.py  api_urls.py  api_views.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_followers.py  0003_alter_user_followers.py  0004_passwordforgottenrequest.py  0005_user_tags.py
users/templates/: album.html  editProfileModal.html  self_profile.html  userProfile.html
werubin/: asgi.py  generators.py  settings.py  urls.py  wsgi.py
werubin/templates/: addToAlbumModal.js  base.html  message.html  navbar.html  users.css
(+27 files in other folders)
